# jd_librarian

./: CHANGELOG.md  README.md  pyproject.toml
examples/: superhero.txt  superhero.yaml
jd/: __init__.py  __main__.py  core.py  lint.py  models.py  report.py  scaffold.py  stats.py
tests/: test_core.py
