[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "jd-librarian"
version = "0.1.0"
description = "A command line tool for managing Johnny Decimal libraries"
requires-python = ">=3.10"
license = { text = "MIT" }

[project.scripts]
jd = "jd.__main__:main"
