[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "jd-librarian"
version = "1.0.0"
description = "A command line tool for managing Johnny Decimal libraries"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "dagonis" }]
keywords = ["johnny-decimal", "organization", "cli", "productivity"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Office/Business",
    "Typing :: Typed",
]
dependencies = ["pyyaml"]

[project.urls]
Homepage = "https://github.com/dagonis/jd_librarian"
Repository = "https://github.com/dagonis/jd_librarian"
Issues = "https://github.com/dagonis/jd_librarian/issues"

[project.scripts]
jd = "jd.__main__:main"

[project.optional-dependencies]
dev = ["pytest"]
